--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nit-scholarship-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -23,7 +24,9 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
+    "nodemailer": "^8.0.1",
     "nodemon": "^3.1.11"
   }
 }
